# K8s_Tutorial

./: .gitignore  Dockerfile  Dockerfile.simple  README.md  main.py  pyproject.toml  requirements.txt
checkpoints/: best_model.pth  results_summary.json  training_history.json
conf/: config.yaml
conf/dataset_conf/: hpc_cluster.yaml  local.yaml
conf/model_conf/: big_simple_cnn.yaml  small_simple_cnn.yaml
conf/trainer_conf/: default_trainer.yaml
helpful_files/: docker_commands.md  docker_workflow.md  yaml_2_python.yaml
k8s/: create_secret.yaml  training_job.yaml  training_job_simple.yaml
src/: datasets.py  engine.py  models.py  trainer.py  transforms.py
